# agent-booster

./: .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
.claude-plugin/: mcp.json  plugin.json
.claude-plugin/skills/booster-context/: SKILL.md
.claude/hooks/: booster-agent-inject.py  booster-gate.py  booster-grep-nudge.py  booster-route.py  booster-session-start.py  booster-stop.py
booster/: cli.py  crusher.py  daemon.py  indexer.py  learner.py  log_util.py  mcp_server.py  retriever.py  stats.py
tests/: test_crusher.py  test_indexer.py  test_learner.py  test_mcp_tools.py  test_v030.py
