[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-booster"
version = "0.1.4"
description = "AST+vector context router for AI coding agents — cut token costs 5-15x"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sudhi Seshachala", email = "Sudhi@b2bsphere.com" }]
keywords = ["ai", "llm", "claude", "cursor", "codex", "mcp", "tokens", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "click>=8.1",
    "mcp>=1.0",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://github.com/sseshachala/conductai"
Repository = "https://github.com/sseshachala/conductai"
Issues = "https://github.com/sseshachala/conductai/issues"

[project.scripts]
booster = "booster.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["booster*"]
